# kubesail-docs

./: 404.html  CNAME  CONTRIBUTING.md  Dockerfile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml  skaffold.yaml
.circleci/: config.yml
.github/workflows/: ci.yml  deploy.yml
FAQ/: index.html
api-docs/: index.html
backups/: index.html
builder/: index.html
docs/: FAQ.md  README.md  about.md  api-docs.md  backups.md  builder.md  byoc.md  contributing.md  definitions.md  deploy.md  domains.md  exposing.md  extra.css  getting-started.md  install_kubernetes.md  limits.md  namespace.md  pibox.md  platform.md  provision_cluster.md  repo_builder.md  tcp.md  templates.md  troubleshooting.md  tunneling.md
docs/guides/: aws.md  bare-metal.md  digital-ocean.md  gke.md
docs/guides/pibox/: display.md  gpio.md  hardware.md  kubesail.md  os.md  reset.md  rpiboot.md
docs/static/: pibox-disk-provisioner.sh  site.webmanifest
getting-started/: index.html
guides/aws/: index.html
guides/bare-metal/: index.html
guides/digital-ocean/: index.html
guides/gke/: index.html
guides/pibox/display/: index.html
guides/pibox/gpio/: index.html
guides/pibox/hardware/: index.html
guides/pibox/kubesail/: index.html
k8s/: docs.yaml
old/: Untitled-2.md  byoc.md  contributing.md  definitions.md  deploy.md  exposing.md  install_kubernetes.md
pibox/: index.html
platform/: index.html
search/: search_index.json
templates/: index.html
tests/: static.postman_environment.json  staticTests.postman_collection.json
tunneling/: index.html
(+3 files in other folders)
