[tool.poetry]
name = "kubesail-docs"
version = "0.1.0"
description = "KubeSail Documentation"
authors = ["Dan Pastusek <dan@hexial.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.3.0"
fontawesome-markdown = "^0.2.6"
mkdocs-material = "^8.2.8"
pymdown-extensions = "^9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
